force-app/main/default/objects/RecentCloneUserLog__c/RecentCloneUserLog__c.object-meta.xml
<CustomObject>
    <label>RecentCloneUserLog</label>
    <nameField>
        <label>RecentCloneUserLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RecentCloneUserLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>