force-app/main/default/objects/RecentCloneUserLog__c/fields/Clone_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Clone_DateTime__c</fullName>
    <label>Clone DateTime</label>
    <type>DateTime</type>
</CustomField>