force-app/main/default/objects/RecentCloneUserLog__c/fields/Source_User__c.field-meta.xml
<CustomField>
    <fullName>Source_User__c</fullName>
    <label>Source User</label>
    <type>TextArea</type>
</CustomField>