force-app/main/default/objects/RecentCloneUserLog__c/fields/Source_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_User_Id__c</fullName>
    <label>Source User Id</label>
    <type>TextArea</type>
</CustomField>